deploy static content

--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-body, html
-{
+body, html {
 	margin: 0;
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: normal;
 }
 
-.card 
-{
+.card {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
@@ -18,23 +16,20 @@ body, html
 	/*padding: 29px 15px 0 15px;*/
 }
 
-.card .preview
-{
+.card .preview {
 	display: block;
     width: 158px;
     margin: 31px auto 46px;
     height: 132px;
 }
 
-.card .card-content
-{
+.card .card-content {
 	margin: 0px 0 0 15px;
 	display: block;
 	width: 168px;
 }
 
-.card .card-content .title
-{
+.card .card-content .title {
 	margin: 0 0 0 0;
 	display: block;
 	font-family: "Roboto", sans-serif;
@@ -44,8 +39,7 @@ body, html
 	line-height: 15px;
 }
 
-.card .card-content .description
-{
+.card .card-content .description {
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: normal;
@@ -54,21 +48,18 @@ body, html
 	margin: 5px 0 0 0;
 }
 
-.card .card-content .stars
-{
+.card .card-content .stars {
 	display: flex;
 	/*flex-direction: row;
 	justify-content: flex-start;
 	margin: 0;*/
 }
 
-.card .card-content .stars .star.last-star
-{
+.card .card-content .stars .star.last-star {
 	/*margin: 0;*/
 }
 
-.card .card-content .count
-{
+.card .card-content .count {
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: normal;
@@ -78,22 +69,19 @@ body, html
 	margin: 1px 0 0;
 }
 
-.card .card-content .stars-row
-{
+.card .card-content .stars-row {
 	display: flex;
 	justify-content: space-between;
 	margin: 15px 0 0 0;
 }
 
-.card .card-content .price-row
-{
+.card .card-content .price-row {
 	display: flex;
 	justify-content: space-between;
 	margin: 20px 0 0 0;
 }
 
-.card .card-content .price-row .price-name
-{	
+.card .card-content .price-row .price-name {	
 	margin: 2px 0px;
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
@@ -103,8 +91,7 @@ body, html
 	text-align: right;
 }
 
-.card .card-content .price-row .price
-{
+.card .card-content .price-row .price {
 	margin: 0;
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
@@ -114,8 +101,7 @@ body, html
 	text-align: right;
 }
 
-.card .button
-{
+.card .button {
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: bold;
@@ -133,15 +119,13 @@ body, html
 	text-decoration: none;
 }
 
-.card .button:hover
-{
+.card .button:hover {
 	color: black;
 	background: white;
 	box-sizing: border-box;
 }
 
-.star
-{
+.star {
 	width: 15px;
     height: 15px;
     margin-right: 4px;
@@ -151,8 +135,7 @@ body, html
     background-position: 1px 2px;
 }
 
-.star.last-star
-{
+.star.last-star {
 	background: url(images/star.svg);
 	background-repeat: no-repeat;
     background-position: 1px 2px;
