--- a/style.css
+++ b/style.css
@@ -1,142 +1,127 @@
-body, html {
-	margin: 0;
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: normal;
+body,
+html {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .card {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	width: 200px;
-	border: 1px solid #F3F3F3;
-	box-sizing: border-box;
-	border-radius: 5px;
-	/*padding: 29px 15px 0 15px;*/
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 200px;
+  border: 1px solid #f3f3f3;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .card .preview {
-	display: block;
-    width: 158px;
-    margin: 31px auto 46px;
-    height: 132px;
+  display: block;
+  width: 158px;
+  margin: 31px auto 46px;
+  height: 132px;
 }
 
 .card .card-content {
-	margin: 0px 0 0 15px;
-	display: block;
-	width: 168px;
+  margin-left: 15px;
+  display: block;
+  width: 168px;
 }
 
 .card .card-content .title {
-	margin: 0 0 0 0;
-	display: block;
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 15px;
+  margin: 0;
+  display: block;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .card .card-content .description {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 11px;
-	line-height: 13px;
-	margin: 5px 0 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  margin-top: 5px;
 }
 
 .card .card-content .stars {
-	display: flex;
-	/*flex-direction: row;
-	justify-content: flex-start;
-	margin: 0;*/
-}
-
-.card .card-content .stars .star.last-star {
-	/*margin: 0;*/
+  display: flex;
 }
 
 .card .card-content .count {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 11px;
-	line-height: 13px;
-	text-align: right;
-	margin: 1px 0 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  text-align: right;
+  margin-top: 1px;
 }
 
 .card .card-content .stars-row {
-	display: flex;
-	justify-content: space-between;
-	margin: 15px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
 }
 
 .card .card-content .price-row {
-	display: flex;
-	justify-content: space-between;
-	margin: 20px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
-.card .card-content .price-row .price-name {	
-	margin: 2px 0px;
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 11px;
-	line-height: 19px;
-	text-align: right;
+.card .card-content .price-row .price-name {
+  margin: 2px 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 19px;
+  text-align: right;
 }
 
 .card .card-content .price-row .price {
-	margin: 0;
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: bold;
-	font-size: 16px;
-	line-height: 19px;
-	text-align: right;
+  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: right;
 }
 
 .card .button {
-	font-family: "Roboto", sans-serif;
-	font-style: normal;
-	font-weight: bold;
-	font-size: 16px;
-	line-height: 16px;
-	text-align: center;
-	text-transform: uppercase;
-	display: block;
-	padding: 12px;
-	background: #00ACDC;
-	color: #fff;
-	border-radius: 5px;
-	margin: 16px 0 15px 0;
-	border: 1px solid #00ACDC;
-	text-decoration: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  display: block;
+  padding: 12px;
+  background: #00acdc;
+  color: #fff;
+  border-radius: 5px;
+  margin: 16px 0 15px;
+  border: 1px solid #00acdc;
+  text-decoration: none;
 }
 
 .card .button:hover {
-	color: black;
-	background: white;
-	box-sizing: border-box;
+  color: black;
+  background: white;
+  box-sizing: border-box;
 }
 
 .star {
-	width: 15px;
-    height: 15px;
-    margin-right: 4px;
-    display: inline-block;
-    background: url(images/star-active.svg);
-    background-repeat: no-repeat;
-    background-position: 1px 2px;
+  width: 15px;
+  height: 15px;
+  margin-right: 4px;
+  display: inline-block;
+  background: url(images/star-active.svg) no-repeat;
+  background-position: 1px 2px;
 }
 
 .star.last-star {
-	background: url(images/star.svg);
-	background-repeat: no-repeat;
-    background-position: 1px 2px;
+  background: url(images/star.svg) no-repeat;
+  background-position: 1px 2px;
 }
